--- a/themes/skycoin/layouts/_default/single.html
+++ b/themes/skycoin/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ partial "header.html" . }}
-
+ {{ $baseurl := .Site.BaseURL }}
 <main class="post">
   <div class="meta">
     <h1 class="meta__title">{{ .Title }}</h1>
@@ -20,7 +20,7 @@
 
   <section class="post__content">
   {{if .Params.image}}
-  <img  src="{{.Params.image}}">
+  <img  src="{{$baseurl}}{{ .Params.image }}">
   {{ else }}
   
   {{ end }}
