--- a/themes/skycoin/layouts/partials/header.html
+++ b/themes/skycoin/layouts/partials/header.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode }}">
 <head>
+  {{ $baseurl := .Site.BaseURL }}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Start of Open Graph -->
@@ -9,13 +10,18 @@
     <meta property="og:type" content="article">
     <meta property="article:published_time" content="{{ .Date.Format "2006-01-02" }}">
     {{ else }}
-    <meta property="og:type" content="website">
+    <meta property="og:type" content="{{.Type}}">
     {{ end }}
     <meta property="og:description" content="{{ .Description }}">
     <meta property="og:url" content="{{ .Permalink }}">
     <meta property="og:site_name" content="{{ .Site.Title }}">
+    {{ $currentLang := .Site.Language }}
+    <meta property="og:locale" content="{{ $currentLang }}" />
+      {{ range .Site.Languages }}
+      <meta property="og:locale:alernative" content="{{ string . }}" />
+      {{ end }}
     {{ if .Params.image }}
-    <meta property="og:image" content="{{ .Params.image }}">
+    <meta property="og:image" content="{{$baseurl}}{{ .Params.image }}">
     {{ end }}
     {{ range .Params.tags }}
     <meta property="og:tags" content="{{ . }}">
